CREATE TABLE patients (
    id              BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    first_name      VARCHAR(80) NOT NULL,
    last_name       VARCHAR(80) NOT NULL,
    post_name       VARCHAR(120),
    dossier_number  VARCHAR(40) NOT NULL UNIQUE,
    birth_date      DATE NOT NULL,
    sex             VARCHAR(10) NOT NULL,
    phone           VARCHAR(120),
    email           VARCHAR(120),
    address         VARCHAR(255),
    created_at      TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE TABLE patient_dossier_sequences (
    sequence_year     INT NOT NULL PRIMARY KEY,
    letter_block      VARCHAR(4) NOT NULL,
    sequence_number   INT NOT NULL
);

CREATE TABLE appointments (
    id            BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    patient_id    BIGINT NOT NULL REFERENCES patients(id) ON DELETE CASCADE,
    scheduled_at  TIMESTAMP NOT NULL,
    status        VARCHAR(20) NOT NULL DEFAULT 'PLANNED',
    reason        VARCHAR(255),
    created_at    TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP
);

CREATE INDEX idx_patients_name ON patients(last_name, first_name);
CREATE INDEX idx_patients_dossier ON patients(dossier_number);
CREATE INDEX idx_appointments_patient ON appointments(patient_id);
